2014-09-28  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c, ml_edit.h, ml_screen.h:
	  Auto wrap is disabled in putting sixel images to the screen.

2014-09-23  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: CSI>4p is changed to CSI>2p for Xsixel.

	* main_loop.c, x_font.h, win32/x_font.c, xlib/x_font.c:
	  - x_font_use_point_size_for_fc() is renamed to x_font_use_point_size().
	  - "use_point_size" option works on win32.

	* MLTermPty.c: Compiling error is fixed.

2014-09-22  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.fb, doc/en/README.fb: Updated.

	* Makefile.in: Minor fix for install-fb target.

	* x_virtual_kbd.c, fb/x_display.c: Software keyboard area is correctly redrawn.

2014-09-22  Araki Ken  <arakiken@users.sf.net>

	* ml_term.c: Opening pty asynchronously is disabled in opening a new pty
	  channel on an exsiting session.

	* x_virtual_kbd.[ch], fb/x_display.c: Software keyboard is redrawn when
	  it is partially exposed.

	* fb/x_imagelib.c: Transparent pixels are replaced by the current background
	  color on 1bpp.

2014-09-21  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_display.c, fb/x_virtual_kbd.c: Software keyboard is available on
	  rotated display.

	* xlib/x_window.c: clear_margin_area() cleargs RIGHT_MARGIN and BOTTOM_MARGIN.

	* x_display_x68kgrf.c: _disp.height is replaced by _display.height to fix
	  segv in x68k_tvram_set_wall_picture().

	* ml_pty_ssh.c: libssh2_session_set_timeout(0) is called at the end of ssh_connect().

2014-09-20  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: x_window_bell() supports BEL_VISUAL.

	* xlib/x_window.c, fb/x_window.c:
	  x_window_blank() doesn't blank RIGHT_MARGIN and BOTTOM_MARGIN.

	* ml_pty_ssh.c: libssh2_session_set_timeout(10000) => libssh2_session_set_timeout(30000)

2014-09-18  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.[ch], ml_pty_intern.h, ml_pty_ssh.c, ml_pty_pipewin32.c, ml_pty_unix.c,